# AetioEngine

./: .gitmodules  CMakeLists.txt
res/shaders/: main.frag  main.vert
src/: Context.cpp  Context.hpp  Game.cpp  Game.hpp  main.cpp
src/graphics/: Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/utils/: Buffer.hpp  Input.cpp  Input.hpp
